--- a/index.html
+++ b/index.html
@@ -15,17 +15,41 @@
     .stat-fill { position:absolute; left:0; top:0; height:16px; border-radius:7px; }
     .stat-text { position:absolute; left:10px; top:0; font-size:13px; color:#fff; }
     .ascii { font-family:monospace; margin:0; font-size:1.1em; color:#fff; background:none;}
-    #event-log { height:120px; overflow-y:auto; background:#181a23; padding:8px 10px; border-radius:7px; font-size:0.96em; margin:12px 0;}
+    /* El panel de logs ya no se muestra aquí, se muestra flotante en la esquina */
     .log-msg.good {color:#82ff90;}
     .log-msg.warn {color:#ffb326;}
     .log-msg.emo {color:#92d0ff;}
     .log-msg {margin-bottom:3px;}
     #main-controls { margin:12px 0 0 0; }
     #mobile-controls { display: none; }
+    /* Nuevo: log flotante en pantalla, fuera del sidepanel */
+    #event-log {
+      position:fixed;
+      right:24px;
+      bottom:180px;
+      width:340px;
+      max-height:65vh;
+      min-height:54px;
+      z-index:200;
+      display:flex;
+      flex-direction:column-reverse;
+      overflow-y:auto;
+      padding:0;
+      pointer-events:auto;
+      align-items:flex-end;
+      background:transparent;
+      font-size:1.1em;
+    }
     @media (max-width:900px) {
       #main { flex-direction:column; }
       #sidepanel { margin:0 0 0 0; min-width:unset; max-width:unset; }
       #canvas { margin: 10px auto; display:block; }
+      #event-log {
+        right:6vw;
+        left:6vw;
+        width:auto;
+        min-width:140px;
+      }
     }
   </style>
 </head>
@@ -38,7 +62,7 @@
       <div id="main-controls">
         <b>Turno:</b> <span id="turnoNum">0</span>
       </div>
-      <div id="event-log"></div>
+      <!-- El log de eventos ya no va aquí -->
       <div style="margin-top:16px; font-size:0.93em; color:#8af;">
         <p>Cuida de tu criatura. Si dejas de interactuar más de 5 segundos, perderá confianza y vínculo rápidamente.<br>
         Cada minuto se pasa un turno automáticamente.<br>
