--- a/index.html
+++ b/index.html
@@ -4,52 +4,139 @@
   <meta charset="UTF-8">
   <title>Tamagotchi TLP</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <style>
-    body { background:#23242a; color:#eee; font-family:sans-serif; margin:0; padding:0;}
-    #main { display:flex; flex-direction:row; align-items: flex-start; }
-    #canvas { background: #32343d; margin: 18px 0 18px 18px; border-radius:18px; box-shadow:0 2px 18px #0009; outline:none; }
-    #sidepanel { margin:18px 0 0 18px; min-width:340px; max-width:400px; }
-    .criatura { background:#222a; border-radius:8px; margin-bottom:12px; padding:12px; border:2px solid #444; }
-    .criatura.selected { border:2px solid #4c9afe; background:#2b3650aa; }
-    .stat-bar { height:16px; background:#3335; border-radius:7px; margin:4px 0 3px 0; position:relative;}
-    .stat-fill { position:absolute; left:0; top:0; height:16px; border-radius:7px; }
-    .stat-text { position:absolute; left:10px; top:0; font-size:13px; color:#fff; }
-    .ascii { font-family:monospace; margin:0; font-size:1.1em; color:#fff; background:none;}
-    /* El panel de logs ya no se muestra aquí, se muestra flotante en la esquina */
-    .log-msg.good {color:#82ff90;}
-    .log-msg.warn {color:#ffb326;}
-    .log-msg.emo {color:#92d0ff;}
-    .log-msg {margin-bottom:3px;}
-    #main-controls { margin:12px 0 0 0; }
-    #mobile-controls { display: none; }
-    /* Nuevo: log flotante en pantalla, fuera del sidepanel */
+    body {
+      background: #23242a;
+      color: #eee;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #main {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      min-height: 100vh;
+    }
+    #canvas {
+      background: #32343d;
+      margin: 18px 0 18px 18px;
+      border-radius: 18px;
+      box-shadow: 0 2px 18px #0009;
+      outline: none;
+      /* Responsive */
+      max-width: 100vw;
+      max-height: 95vh;
+      width: 2300px;
+      height: 1700px;
+    }
+    #sidepanel {
+      margin: 18px 0 0 18px;
+      min-width: 340px;
+      max-width: 400px;
+      background: #222a;
+      border-radius: 12px;
+      padding: 16px 18px 18px 18px;
+      box-shadow: 0 2px 14px #0007;
+    }
+    .criatura {
+      background: #222a;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      padding: 12px;
+      border: 2px solid #444;
+      position: relative;
+    }
+    .criatura.selected {
+      border: 2px solid #4c9afe;
+      background: #2b3650aa;
+    }
+    .stat-bar {
+      position: relative;
+      height: 18px;
+      background: #3335;
+      border-radius: 7px;
+      margin: 4px 0 3px 0;
+      overflow: hidden;
+    }
+    .stat-fill {
+      position: absolute;
+      left: 0; top: 0;
+      height: 18px;
+      border-radius: 7px;
+      transition: width 0.3s;
+    }
+    .stat-text {
+      position: absolute;
+      left: 10px; top: 0;
+      font-size: 13px;
+      color: #fff;
+      line-height: 18px;
+      z-index: 2;
+      font-weight: 500;
+      text-shadow: 0 1px 3px #000a;
+    }
+    .ascii {
+      font-family: monospace;
+      margin: 0; font-size: 1.1em; color: #fff; background: none;
+    }
+    /* Floating log panel */
     #event-log {
-      position:fixed;
-      right:24px;
-      bottom:180px;
-      width:340px;
-      max-height:65vh;
-      min-height:54px;
-      z-index:200;
-      display:flex;
-      flex-direction:column-reverse;
-      overflow-y:auto;
-      padding:0;
-      pointer-events:auto;
-      align-items:flex-end;
-      background:transparent;
-      font-size:1.1em;
+      position: fixed;
+      right: 24px;
+      bottom: 180px;
+      width: 340px;
+      max-height: 65vh;
+      min-height: 54px;
+      z-index: 200;
+      display: flex;
+      flex-direction: column-reverse;
+      overflow-y: auto;
+      padding: 0;
+      pointer-events: auto;
+      align-items: flex-end;
+      background: transparent;
+      font-size: 1.1em;
+    }
+    .log-msg.good { color: #82ff90; }
+    .log-msg.warn { color: #ffb326; }
+    .log-msg.emo { color: #92d0ff; }
+    .log-msg { margin-bottom: 3px; }
+    #main-controls { margin: 12px 0 0 0; }
+    #mobile-controls { display: none; }
+    #stat-overlay {
+      position: fixed;
+      top: 0; left: 50%; transform: translateX(-50%);
+      background: #23242aee;
+      color: #fff;
+      font-size: 1.2em;
+      border-radius: 10px;
+      padding: 8px 42px 8px 42px;
+      z-index: 40;
+      box-shadow: 0 0 18px #0008;
+      pointer-events: none;
+      min-width: 360px;
+      text-align: center;
     }
     @media (max-width:900px) {
-      #main { flex-direction:column; }
-      #sidepanel { margin:0 0 0 0; min-width:unset; max-width:unset; }
-      #canvas { margin: 10px auto; display:block; }
+      #main { flex-direction: column; }
+      #sidepanel { margin: 0 0 0 0; min-width: unset; max-width: unset; }
+      #canvas { margin: 10px auto; display: block; width: 98vw; height: 56vw; min-height: 300px; }
       #event-log {
-        right:6vw;
-        left:6vw;
-        width:auto;
-        min-width:140px;
+        right: 6vw;
+        left: 6vw;
+        width: auto;
+        min-width: 140px;
       }
+      #stat-overlay {
+        min-width: 140px;
+        font-size: 1em;
+        padding: 5px 5vw 5px 5vw;
+      }
+    }
+    button {
+      font-family: inherit;
     }
   </style>
 </head>
@@ -57,20 +144,20 @@
   <div id="main">
     <canvas id="canvas" width="2300" height="1700" tabindex="0"></canvas>
     <div id="sidepanel">
-      <h2>Tamagotchi TLP</h2>
+      <h2 style="margin-top:0;margin-bottom:10px;">Tamagotchi TLP</h2>
       <div id="criaturasPanel"></div>
       <div id="main-controls">
         <b>Turno:</b> <span id="turnoNum">0</span>
       </div>
-      <!-- El log de eventos ya no va aquí -->
       <div style="margin-top:16px; font-size:0.93em; color:#8af;">
-        <p>Cuida de tu criatura. Si dejas de interactuar más de 5 segundos, perderá confianza y vínculo rápidamente.<br>
+        <p>Cuida de tu criatura, explora zonas y mantén su ánimo.<br>
+        Si dejas de interactuar más de <b>5 segundos</b>, perderá confianza y vínculo rápidamente.<br>
         Cada minuto se pasa un turno automáticamente.<br>
-        Usa el mapa para mover tu criatura y explorar las zonas.</p>
+        Usa el mapa para mover tu criatura y descubre sorpresas.</p>
       </div>
     </div>
   </div>
-  <!-- Controles móviles se añaden por JS -->
+  <!-- El log flotante lo crea game.js dinámicamente -->
 
   <!-- Sonidos opcionales (puedes poner archivos vacíos si no los necesitas) -->
   <audio id="moveSfx" src="move.wav"></audio>
