--- a/index.html
+++ b/index.html
@@ -5,38 +5,67 @@
   <title>Tamagotchi TLP</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
+      min-height: 100vh;
       background: #23242a;
       color: #eee;
       font-family: sans-serif;
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
     #main {
       display: flex;
       flex-direction: row;
-      align-items: flex-start;
-      min-height: 100vh;
+      align-items: stretch;
+      justify-content: center;
+      height: 100vh;
+      width: 100vw;
+      box-sizing: border-box;
+    }
+    #canvas-container {
+      flex: 1 1 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 0;
+      min-height: 0;
+      /* Prevent scrollbars */
+      overflow: hidden;
     }
     #canvas {
+      display: block;
       background: #32343d;
-      margin: 18px 0 18px 18px;
       border-radius: 18px;
       box-shadow: 0 2px 18px #0009;
       outline: none;
+      margin: 0 auto;
       max-width: 100vw;
-      max-height: 95vh;
-      width: 1536px;
-      height: 800px;
+      max-height: 100vh;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
     #sidepanel {
-      margin: 18px 0 0 18px;
-      min-width: 340px;
+      width: 350px;
       max-width: 400px;
+      min-width: 260px;
       background: #222a;
       border-radius: 12px;
+      margin: 18px 18px 18px 0;
       padding: 16px 18px 18px 18px;
       box-shadow: 0 2px 14px #0007;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      height: calc(100vh - 36px);
+      overflow-y: auto;
     }
     .criatura {
       background: #222a;
@@ -116,10 +145,10 @@
       min-width: 360px;
       text-align: center;
     }
-    @media (max-width:900px) {
+    @media (max-width: 1100px) {
       #main { flex-direction: column; }
-      #sidepanel { margin: 0 0 0 0; min-width: unset; max-width: unset; }
-      #canvas { margin: 10px auto; display: block; width: 98vw; height: 56vw; min-height: 300px; }
+      #canvas-container { width: 100vw; height: 55vw; min-height: 300px; }
+      #sidepanel { margin: 0 auto 10px auto; width: 98vw; max-width: 98vw; }
       #event-log {
         right: 6vw;
         left: 6vw;
@@ -132,14 +161,14 @@
         padding: 5px 5vw 5px 5vw;
       }
     }
-    button {
-      font-family: inherit;
-    }
+    button { font-family: inherit; }
   </style>
 </head>
 <body>
   <div id="main">
-    <canvas id="canvas" width="1536" height="800" tabindex="0"></canvas>
+    <div id="canvas-container">
+      <canvas id="canvas" tabindex="0"></canvas>
+    </div>
     <div id="sidepanel">
       <h2 style="margin-top:0;margin-bottom:10px;">Tamagotchi TLP</h2>
       <div id="criaturasPanel"></div>
@@ -147,10 +176,12 @@
         <b>Turno:</b> <span id="turnoNum">0</span>
       </div>
       <div style="margin-top:16px; font-size:0.93em; color:#8af;">
-        <p>Cuida de tu criatura, explora zonas y mantén su ánimo.<br>
-        Si dejas de interactuar más de <b>5 segundos</b>, perderá confianza y vínculo rápidamente.<br>
-        Cada minuto se pasa un turno automáticamente.<br>
-        Usa el mapa para mover tu criatura y descubre sorpresas.</p>
+        <p>
+          Cuida de tu criatura, explora zonas y mantén su ánimo.<br>
+          Si dejas de interactuar más de <b>5 segundos</b>, perderá confianza y vínculo rápidamente.<br>
+          Cada minuto se pasa un turno automáticamente.<br>
+          Usa el mapa para mover tu criatura y descubre sorpresas.
+        </p>
       </div>
     </div>
   </div>
@@ -158,6 +189,29 @@
   <audio id="moveSfx" src="move.wav"></audio>
   <audio id="okSfx" src="ok.wav"></audio>
   <audio id="errSfx" src="err.wav"></audio>
+  <script>
+    // Ajuste automático del canvas para ocupar el máximo espacio disponible y centrarse
+    function resizeCanvas() {
+      const canvas = document.getElementById('canvas');
+      const container = document.getElementById('canvas-container');
+      // Deja espacio para sidepanel en desktop
+      let panelWidth = 350;
+      if (window.innerWidth < 1100) panelWidth = 0;
+      const w = window.innerWidth - panelWidth - 40;
+      const h = window.innerHeight - 36;
+      // Tamaño base del mapa
+      const aspect = 24 / 16;
+      let cw = Math.min(w, h * aspect);
+      let ch = Math.min(h, w / aspect);
+      // Ajusta para contener el mapa completo y bien centrado
+      canvas.width = Math.round(cw);
+      canvas.height = Math.round(ch);
+      canvas.style.width = cw + 'px';
+      canvas.style.height = ch + 'px';
+    }
+    window.addEventListener('resize', resizeCanvas);
+    window.addEventListener('DOMContentLoaded', resizeCanvas);
+  </script>
   <script src="game.js"></script>
 </body>
 </html>
