--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Tamagotchi TLP</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    :root {
+      --color-bg: #23242a;
+      --color-panel: #23263cbb;
+      --color-card: #23263c;
+      --color-tile: #32343d;
+      --color-glow: #4b8cff;
+      --radius: 18px;
+    }
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+      background: var(--color-bg);
+      font-family: 'Nunito', 'Segoe UI', 'Arial', sans-serif;
+      color: #f3f4fa;
     }
     body {
       min-height: 100vh;
-      background: #23242a;
-      color: #eee;
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
       overflow: hidden;
     }
+
     #main {
       display: flex;
       flex-direction: row;
@@ -28,7 +34,9 @@
       height: 100vh;
       width: 100vw;
       box-sizing: border-box;
+      background: linear-gradient(120deg, #292c3b 0%, #313d51 100%);
     }
+
     #canvas-container {
       flex: 1 1 auto;
       display: flex;
@@ -37,161 +45,224 @@
       min-width: 0;
       min-height: 0;
       overflow: hidden;
+      background: var(--color-tile);
+      border-radius: var(--radius);
+      margin: 16px 0 16px 16px;
+      box-shadow: 0 4px 28px #0007;
     }
     #canvas {
       display: block;
-      background: #32343d;
-      border-radius: 18px;
-      box-shadow: 0 2px 18px #0009;
+      background: transparent;
+      border-radius: var(--radius);
       outline: none;
-      margin: 0 auto;
-      max-width: 100vw;
-      max-height: 100vh;
       width: 100%;
       height: 100%;
       object-fit: contain;
+      box-shadow: 0 2px 18px #0008;
+      max-width: 98vw;
+      max-height: 93vh;
+      transition: box-shadow .15s;
     }
+
     #sidepanel {
-      width: 350px;
-      max-width: 400px;
-      min-width: 260px;
-      background: #222a;
-      border-radius: 12px;
+      min-width: 340px;
+      max-width: 420px;
+      width: 360px;
+      background: var(--color-panel);
+      border-radius: var(--radius);
       margin: 18px 18px 18px 0;
-      padding: 16px 18px 18px 18px;
-      box-shadow: 0 2px 14px #0007;
+      padding: 24px 24px 20px 24px;
+      box-shadow: 0 2px 24px #0006;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      height: calc(100vh - 36px);
-      overflow-y: auto;
-      transition: width 0.2s, min-width 0.2s, max-width 0.2s;
-    }
-    .criatura {
-      background: #222a;
-      border-radius: 8px;
-      margin-bottom: 12px;
-      padding: 12px;
-      border: 2px solid #444;
+      font-size: 1.06em;
       position: relative;
+    }
+    #sidepanel h1 {
+      font-family: 'Nunito', 'Segoe UI', 'Arial', sans-serif;
+      margin: 0 0 12px 0;
+      color: #7fd1fa;
+      font-size: 2em;
+      letter-spacing: 1.5px;
+      text-shadow: 0 2px 12px #01262a3c;
+      font-weight: 800;
+    }
+    #sidepanel .subtitle {
+      color: #d1beff;
+      margin-bottom: 18px;
+      font-size: 1.11em;
+      letter-spacing: 0.1em;
+      font-weight: 600;
+      text-shadow: 0 1px 6px #3336;
+    }
+    #sidepanel .panel-section {
+      margin-bottom: 1.25em;
+    }
+
+    .criatura {
+      background: var(--color-card);
+      border-radius: 13px;
+      margin-bottom: 12px;
+      padding: 14px 18px 14px 16px;
+      border: 2px solid #3765ba33;
+      box-shadow: 0 2px 15px #0003;
+      position: relative;
+      transition: box-shadow .12s, border-color .15s;
+      font-size: 1em;
     }
     .criatura.selected {
-      border: 2px solid #4c9afe;
-      background: #2b3650aa;
+      border: 2px solid var(--color-glow);
+      box-shadow: 0 0 0 1.5px var(--color-glow),0 2px 15px #000a;
+      background: #27365daa;
     }
-    .stat-bar {
-      position: relative;
-      height: 18px;
-      background: #3335;
-      border-radius: 7px;
-      margin: 4px 0 3px 0;
-      overflow: hidden;
+
+    .stat-bar, .stat-bar-vert {
+      margin-bottom: 0.4em;
     }
-    .stat-fill {
-      position: absolute;
-      left: 0; top: 0;
-      height: 18px;
-      border-radius: 7px;
-      transition: width 0.3s;
-    }
-    .stat-text {
-      position: absolute;
-      left: 10px; top: 0;
+    .stat-bar .stat-text {
       font-size: 13px;
-      color: #fff;
-      line-height: 18px;
-      z-index: 2;
-      font-weight: 500;
-      text-shadow: 0 1px 3px #000a;
+      font-weight: 600;
     }
-    .ascii {
-      font-family: monospace;
-      margin: 0; font-size: 1.1em; color: #fff; background: none;
+    .stat-bar-vert {
+      margin: 0 4px 0 0;
     }
+
     #event-log {
       position: fixed;
-      right: 24px;
-      bottom: 180px;
-      width: 340px;
-      max-height: 65vh;
+      right: 32px;
+      bottom: 140px;
+      width: 360px;
+      max-height: 68vh;
       min-height: 54px;
       z-index: 200;
       display: flex;
       flex-direction: column-reverse;
       overflow-y: auto;
       padding: 0;
-      pointer-events: auto;
       align-items: flex-end;
       background: transparent;
       font-size: 1.1em;
+      pointer-events: none;
     }
-    .log-msg.good { color: #82ff90; }
-    .log-msg.warn { color: #ffb326; }
-    .log-msg.emo { color: #92d0ff; }
+
+    .log-msg.good { color: #8bffad; }
+    .log-msg.warn { color: #ffd176; }
+    .log-msg.emo { color: #9ad2ff; }
     .log-msg { margin-bottom: 3px; }
-    #main-controls { margin: 12px 0 0 0; }
-    #mobile-controls { display: none; }
+
     #stat-overlay {
       position: fixed;
-      top: 0; left: 50%; transform: translateX(-50%);
-      background: #23242aee;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #22262cfa;
       color: #fff;
       font-size: 1.2em;
-      border-radius: 10px;
-      padding: 8px 42px 8px 42px;
+      border-radius: 14px;
+      padding: 9px 48px 10px 48px;
       z-index: 40;
-      box-shadow: 0 0 18px #0008;
+      box-shadow: 0 0 18px #0007;
       pointer-events: none;
       min-width: 360px;
       text-align: center;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      border: 1.5px solid #7fd1fa44;
     }
-    @media (max-width: 900px) {
-      #main {
-        flex-direction: column;
-        align-items: stretch;
-      }
-      #canvas-container {
-        width: 100vw;
-        height: 55vw;
-        min-height: 300px;
-      }
+
+    /* Zoom buttons */
+    .zoom-ui {
+      position: fixed;
+      top: 62px;
+      right: 17px;
+      z-index: 99;
+      background: #233d55ee;
+      border-radius: 11px;
+      padding: 8px 15px;
+      box-shadow: 0 2px 10px #0007;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      backdrop-filter: blur(2px);
+    }
+    .zoom-ui button {
+      font-size: 1.35em;
+      border-radius: 5px;
+      margin: 4px;
+      padding: 2px 10px;
+      background: #263d5e;
+      color: #fff;
+      border: 1px solid #5396e0;
+      cursor: pointer;
+      transition: background .13s, color .13s;
+    }
+    .zoom-ui button:hover {
+      background: #5396e0;
+      color: #fff;
+    }
+
+    /* Floating buttons */
+    .floating-btn {
+      position: fixed;
+      right: 24px;
+      background: #2a2e4c;
+      color: #fff;
+      border: none;
+      border-radius: 13px;
+      font-size: 1.23em;
+      padding: 15px 24px;
+      z-index: 99;
+      box-shadow: 0 3px 14px #0006;
+      cursor: pointer;
+      transition: background .15s, box-shadow .15s;
+      font-weight: 700;
+    }
+    #btn-cris { bottom: 24px; background: #3f3c6b; }
+    #btn-cris:hover { background: #5162e6; }
+    #btn-musica { bottom: 90px; background: #2196f3; }
+    #btn-musica:hover { background: #5bb0f8; }
+
+    @media (max-width: 1100px) {
+      #main { flex-direction: column; }
       #sidepanel {
-        width: 97vw;
-        max-width: 97vw;
-        min-width: 0;
-        margin: 8px auto 8px auto;
-        padding: 8px 7vw 12px 7vw;
-        font-size: 1em;
-        box-sizing: border-box;
-        /* Ocupa menos vertical */
-        height: auto;
-        max-height: 250px;
-        overflow-y: auto;
+        margin: 0 auto 14px auto;
+        min-width: unset; max-width: unset; width: 99vw;
+        border-radius: 0 0 26px 26px;
       }
+      #canvas-container { margin: 0 auto; }
       #event-log {
-        right: 6vw;
-        left: 6vw;
+        left: 3vw;
+        right: 3vw;
         width: auto;
         min-width: 140px;
       }
       #stat-overlay {
         min-width: 140px;
         font-size: 1em;
-        padding: 5px 5vw 5px 5vw;
+        padding: 7px 5vw 7px 5vw;
       }
+    }
+    @media (max-width: 800px) {
+      #sidepanel { padding: 8px 8vw 12px 8vw; }
+      .criatura { padding: 10px 6vw 10px 6vw; }
+      #stat-overlay { padding: 6px 2vw 6px 2vw; }
+      .zoom-ui { right: 3vw; top: 50px; }
     }
     @media (max-width: 600px) {
       #sidepanel {
-        padding: 4px 2vw 8px 2vw;
-        font-size: 0.94em;
-        max-height: 160px;
+        padding: 2px 1vw 6px 1vw;
+        font-size: 0.95em;
+        max-height: 162px;
       }
-      #main-controls {
-        font-size: 0.94em;
-      }
+      #main-controls { font-size: 0.95em; }
+      .zoom-ui { right: 5vw; top: 20px; }
+      #canvas-container { margin: 0 auto; }
+      #event-log { right: 2vw; left: 2vw; }
     }
     button { font-family: inherit; }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="main">
@@ -199,41 +270,31 @@
       <canvas id="canvas" tabindex="0"></canvas>
     </div>
     <div id="sidepanel">
-      <h2 style="margin-top:0;margin-bottom:10px;font-size:1.3em;">Tamagotchi TLP</h2>
-      <div id="criaturasPanel"></div>
-      <div id="main-controls">
+      <h1>Tamagotchi TLP</h1>
+      <div class="subtitle">Cuidando mente y emociones</div>
+      <div id="criaturasPanel" class="panel-section"></div>
+      <div id="main-controls" class="panel-section">
         <b>Turno:</b> <span id="turnoNum">0</span>
       </div>
-      <div style="margin-top:10px; font-size:0.93em; color:#8af;">
+      <div class="panel-section" style="margin-top:10px; color:#b0f;">
         <p style="margin:0;">
-          Cuida de tu criatura.<br>
-          Si dejas de interactuar más de <b>5s</b>, perderá confianza y vínculo.<br>
-          Cada minuto se pasa un turno.
+          Interactúa y ayuda a tu criatura.<br>
+          Si no juegas en <b>10s</b>, perderá confianza y vínculo.<br>
+          Cada minuto avanza un turno.<br>
+          Explora el mapa, usa objetos y busca sorpresas.
+        </p>
+      </div>
+      <div style="margin-top:14px; font-size:0.92em; color:#6fe;">
+        <p style="margin:0;">
+          <b>Consejo:</b> Pulsa y arrastra el mapa para moverlo. Usa el zoom para ver más detalles.
         </p>
       </div>
     </div>
   </div>
+  <!-- El log flotante lo crea game.js dinámicamente -->
   <audio id="moveSfx" src="move.wav"></audio>
   <audio id="okSfx" src="ok.wav"></audio>
   <audio id="errSfx" src="err.wav"></audio>
-  <script>
-    function resizeCanvas() {
-      const canvas = document.getElementById('canvas');
-      const container = document.getElementById('canvas-container');
-      let panelWidth = (window.innerWidth > 900) ? 350 : 0;
-      const w = window.innerWidth - panelWidth - 40;
-      const h = window.innerHeight - 36;
-      const aspect = 24 / 16;
-      let cw = Math.min(w, h * aspect);
-      let ch = Math.min(h, w / aspect);
-      canvas.width = Math.round(cw);
-      canvas.height = Math.round(ch);
-      canvas.style.width = cw + 'px';
-      canvas.style.height = ch + 'px';
-    }
-    window.addEventListener('resize', resizeCanvas);
-    window.addEventListener('DOMContentLoaded', resizeCanvas);
-  </script>
   <script src="game.js"></script>
 </body>
 </html>
